--- a/Prover.Instruments.Search/Views/InstrumentsListPage.xaml
+++ b/Prover.Instruments.Search/Views/InstrumentsListPage.xaml
@@ -87,25 +87,25 @@
             <RowDefinition Height="9*" />
            
         </Grid.RowDefinitions>
+
         <StackPanel Grid.Row="0"
                     Margin="10, 0, 0, 0"
                     Orientation=" Horizontal">
-            <Button Command="{Binding OneWeekFilterCommand}" Style="{StaticResource Flat}">Last 7 Days</Button>
-            <Button Command="{Binding OneMonthFilterCommand}" Style="{StaticResource Flat}">Last 30 Days</Button>
-            <TextBox x:Name="SerialNumber"
-                     Width="125"
-                     Margin="2"
-                     HorizontalAlignment="Right"
-                     Text="{Binding Instruments.SerialNumber,
-                                    UpdateSourceTrigger=PropertyChanged}" />
+            <Button Command="{Binding OneWeekFilterCommand}" Style="{DynamicResource SimpleButton}" Content="Last 7 Days"/>
+            <Button Command="{Binding OneMonthFilterCommand}" Style="{DynamicResource SimpleButton}" Content="Last 30 Days"/>
 
             <!--  <TextBlock HorizontalAlignment="Right">Serial Number:</TextBlock>  -->
         </StackPanel>
+        <TextBox x:Name="SerialNumber"
+    		Width="125"
+    		Margin="0,0,10,0"
+    		HorizontalAlignment="Right"
+    		Text="{Binding Instruments.SerialNumber, UpdateSourceTrigger=PropertyChanged}" FontSize="26.667" />
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
-            <ListBox Name="InstrumentList"
+            <ListBox x:Name="InstrumentList"
                      Margin="10"
                      HorizontalContentAlignment="Stretch"
                      VerticalContentAlignment="Stretch"
@@ -114,9 +114,7 @@
                      ItemContainerStyle="{StaticResource InstrumentStyle}"
                      ItemTemplate="{StaticResource ResourceKey=inst}"
                      ItemsSource="{Binding Source={StaticResource Instruments}}"
-                     SelectedItem="{Binding DataContext.SelectedInstrument,
-                                            ElementName=InstrumentsList,
-                                            Mode=TwoWay}" BorderBrush="{DynamicResource HeaderColour}" />
+                     SelectedItem="{Binding DataContext.SelectedInstrument, ElementName=InstrumentsList, Mode=TwoWay}" BorderBrush="{DynamicResource HeaderColour}" />
 
             <!--  Details  -->
             <!--
