--- a/Prover.Client/Windows/MainWindow.xaml
+++ b/Prover.Client/Windows/MainWindow.xaml
@@ -14,7 +14,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="1.25*" />
             <RowDefinition Height="7*" />
-            <RowDefinition />
+            <RowDefinition Height="50" />
         </Grid.RowDefinitions>
         <Grid Grid.Row="0"
               Height="50"
@@ -111,7 +111,7 @@
                 <ColumnDefinition />
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
-
+            <Button Command="{Binding SettingsCommand}">Settings</Button>
             <ContentControl Grid.Column="1" prism:RegionManager.RegionName="{x:Static regions:RegionNames.NotificationRegion}" />
         </Grid>
         <!--  <ContentControl prism:RegionManager.RegionName="{x:Static regions:RegionNames.ContentRegion}" />  -->
