--- a/Prover.Client/Windows/MainWindow.xaml
+++ b/Prover.Client/Windows/MainWindow.xaml
@@ -111,7 +111,7 @@
                 <ColumnDefinition />
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
-            <Button Command="{Binding SettingsCommand}">Settings</Button>
+            <Button Command="{Binding SettingsCommand}" Visibility="Hidden">Settings</Button>
             <ContentControl Grid.Column="1" prism:RegionManager.RegionName="{x:Static regions:RegionNames.NotificationRegion}" />
         </Grid>
         <!--  <ContentControl prism:RegionManager.RegionName="{x:Static regions:RegionNames.ContentRegion}" />  -->
